--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-       <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <title>Document</title>
-</head>
-<body>
-       <header>
-              <div class="container">
-                     
-              <div>Cars Classic Autotraders</div>
-              <div>
-                     <a>Cars</a>
-                     
-              </div>
-              <div>Autotrader</div>
 
-              </div>
-       </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <header>
+        <div class="container">
+
+            <div>
+                <p>Cars Classic Autotraders</p>
+                                    <nav>
+                        <ul class="nav_menu_list">
+                            <li><a href="#!" class="nav_link">Cars</a></li>
+                            <li><a href="#!" class="nav_link">About us</a></li>
+                            <li><a href="#!" class="nav_link">Services</a></li>
+                            <li><a href="#!" class="nav_link">Contacts</a></li>
+                        </ul>
+                    </nav>
+
+                    <span>+1 (240) 375-1288</span>
+
+                </div>
+    </header>
 </body>
+
 </html>
